# rustchat

./: .gitignore  Cargo.toml  build.rs
proto/: messenger.proto
src/: main.rs
src/proto_gen/: messenger.rs  messenger_grpc.rs  mod.rs
