[package]
name = "rustchat"
version = "0.1.0"
authors = ["Brandon Pollack <brandonpollack23@gmail.com>"]
edition = "2018"
build = false #TODO TURN ON

[dependencies]
chashmap = ""
file_scanner = ""
futures = ""
grpcio = ""
num = ""
num_cpus = ""
protobuf = ""

[dependencies.concurrent-hashmap]
version = ""
default-features = false

[build-dependencies]
protoc-grpcio = ""
